route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: openshift-sslproxy
    name: weepee-ssl
    namespace: test3
  spec:
    host: test-test3.deploy.alpha.aws.weepee.io
    port:
      targetPort: 8080-tcp
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGLjCCBRagAwIBAgISAw5PD9nMQrcJCkna/lsyUIp8MA0GCSqGSIb3DQEBCwUA
[...]
        w80=
        -----END CERTIFICATE-----
        -----BEGIN CERTIFICATE-----
        MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
        KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIGLjCCBRagAwIBAgISAw5PD9nMQrcJCkna/lsyUIp8MA0GCSqGSIb3DQEBCwUA
[...]
        w80=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIJKgIBAAKCAgEA0zPmpd/7euYqvH0mL22gB/mlbofAxW67MOIIaeqSZl72APPk
[...]
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: openshift-sslproxy
kind: List
metadata: {}
